[project]
name = "vimm"
version = "0.1.0"
description = "Scraper for vimm.net"
authors = [
    {name = "TonyGrif", email = "TonyGriffin2000@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vimm/"]
