[project]
name = "vimm"
version = "0.2"
description = "Scraper for vimm.net"
authors = [
    {name = "TonyGrif", email = "TonyGriffin2000@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "poethepoet>=0.30.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.5",
    "ruff>=0.11.13",
]

[tool.poe.tasks]
test = "pytest --cov=vimm --cov-report term-missing"

_imports = "ruff check --select I --fix ."
_format = "ruff format ."
format.sequence = ["_imports", "_format"]

_type = "mypy vimm/"
_check = "ruff check ."
lint.sequence = ["_type", "_check"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vimm/"]
